# template_gfx_project

./: CMakeLists.txt  LICENSE  README.md  main.cpp
libs/glad/: glad.c  glad.h
src/: main.cpp
